--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,15 @@
 		<meta charset="utf-8">
 		<meta name="description" content="Alicia Calvo · Personal website">
 	 	<meta name="keywords" content="alicia calvo">
+		<!-- Google Analytics -->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-62429049-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-62429049-1');
+		</script>
 	 	<!-- Google Font -->
 	 	<link href="https://fonts.googleapis.com/css?family=Merriweather:300,400" rel="stylesheet">
 	 	<!-- Bootstrap -->
