--- a/index.htm
+++ b/index.htm
@@ -34,14 +34,13 @@
  		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/v4-shims.js"></script>
 </head>
 <body>
-	<!-- Just an image -->
+	<!-- Future navbar -->
 		<nav class="navbar navbar-light">
 		  <a class="navbar-brand" href="#">
 		    <img src="#" width="30" height="30" alt="">
 		  </a>
 		</nav>
-	<header>
-	</header> 
+	<!-- Content -->
 	<main class="container">
 		<p class="hi">Hi there! My name is Alicia Calvo. </p>
 		<p>I have experience working as a Web Content Manager.</p>
@@ -53,6 +52,7 @@
 		  <a href="https://www.linkedin.com/in/aliciacbu/"><i class="fab fa-linkedin-in"></i></a>
 		</div>
 	</main>
+	<!-- Footer -->
 	<footer>
 		 <div class="container">
 		Alicia Calvo, 2018.
