--- a/index.htm
+++ b/index.htm
@@ -40,30 +40,31 @@
 		<!-- Font Awesome -->
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
  		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/v4-shims.js"></script>
+
 </head>
 <body>
 	<!-- Future navbar -->
 		<nav class="navbar navbar-light">
 		  <a class="navbar-brand" href="#">
-		    <img src="#" width="30" height="30" alt="">
+		    <img src="assets/apple-touch-icon.png" width="30" height="30" alt="">
 		  </a>
 		</nav>
 	<!-- Content -->
 	<main class="container">
-		<p class="hi">Hi there! My name is Alicia Calvo. </p>
-		<p>I have experience working as a Web Content Manager.</p>
-		<p>Nowadays, I work as a web developer in a <strong>#DigitalHumanities</strong> <a href="http://www.uab.cat/web/recerca-i-consultoria/projectes-en-curs-1345734690260.html">project</a> at <a href="http://www.uab.cat/">UAB</a>. I enjoy learning every day and I am currently studying web application development at <a href="http://ioc.xtec.cat/">IOC</a>.</p>
-		<p>Feel free to contact me at <a href="mailto:Alicia.Calvo@uab.cat">alicia.calvo@uab.cat</a>.</p>
-		<p><i clas="fab fa-twitter"></i></p>
+		<p class="hi">Hi there! 👋 My name is Alicia Calvo. </p>
+		<p>I have experience working as a Web Developer on a <strong>#DigitalHumanities</strong> <a href="http://www.uab.cat/web/recerca-i-consultoria/projectes-en-curs-1345734690260.html">project</a> at <a href="http://www.uab.cat/">UAB</a>.</p>
+		<p>Currently, I'm also working for <strong><a href="https://vasscompany.com/">VASS</a>.</p>
+		<p>Feel free to connect with me on <a href="https://www.linkedin.com/in/aliciacalvob/">Linkedin.</a> 👩‍💻</p>
+		<!-- <p><i clas="fab fa-twitter"></i></p> -->
 		<div class="social-icons">
 		  <a href="https://twitter.com/aliciacbu"><i class="fab fa-twitter"></i></a>
-		  <a href="https://www.linkedin.com/in/aliciacbu/"><i class="fab fa-linkedin-in"></i></a>
+		  <a href="https://www.linkedin.com/in/aliciacalvob/"><i class="fab fa-linkedin-in"></i></a>
 		</div>
 	</main>
 	<!-- Footer -->
 	<footer>
 		 <div class="container">
-		Alicia Calvo, 2018.
+		Alicia Calvo, <script>document.write(new Date().getFullYear())</script>.
 		</div>
 	</footer>
 </body>
